# multithread-writer

./: .gitignore  CMakeLists.txt  DockerFile  Makefile  README.md  ascii-art.txt  docker-compose.yaml  main.cpp
modules/: config.hh  logger.hh  processor.cc  processor.hh  reader.cc  reader.hh  threads_manager.cc  threads_manager.hh
